@@ -4,6 +4,7 @@
 - Support for editing lyrics
 - Correctly handle lyrics events when adding or deleting measures
 - Allow deleting instrument through a contextual menu
+- Preserve most recent controller values when deleting measures
 
 1.4.7
 - Fix for .MID and .MIDI files (upper-case extension)
